--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,12 @@
         "titleBar.inactiveBackground": "#42b88399",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#42b883"
+    "peacock.color": "#42b883",
+    "reactSnippets.settings.prettierEnabled": true,
+    "prettier.bracketSameLine": true,
+    "prettier.configPath": ".prettierrc",
+    "prettier.jsxSingleQuote": true,
+    "prettier.insertPragma": true,
+    "prettier.printWidth": 120,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
