--- a/06-jobs-api/starter/package.json
+++ b/06-jobs-api/starter/package.json
@@ -27,5 +27,12 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "arrowParens": "always"
   }
 }
